--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@elastic/react-search-ui-views": "^0.1.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "swiftype-app-search-javascript": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
