--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-site": "./scripts/build-site",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
